# raisin_toppling_controller

./: CMakeLists.txt  package.xml
config/: params.yaml
include/raisin_toppling_controller/: raiboController.hpp  raisin_toppling_controller.hpp
rsc/: pt_to_txt.py
rsc/donghoon/ver10_clearance/: GRU_50000.txt  MLP_50000.txt  mean50000.csv  var50000.csv
rsc/donghoon/ver6_smoothness_10/: GRU_50000.txt  MLP_50000.txt  mean50000.csv  var50000.csv
rsc/donghoon/ver7_clearance_only_foot_pos/: GRU_50000.txt  MLP_50000.txt  mean50000.csv  var50000.csv
rsc/donghoon/ver8_d_gain_5/: GRU_50000.txt  MLP_50000.txt  mean50000.csv  var50000.csv
rsc/donghoon/ver9_fast_locomotion/: GRU_30000.txt  MLP_30000.txt  mean30000.csv  var30000.csv
rsc/jsh/: var100000.csv
rsc/jsh/ver1/: GRU_100000.txt  MLP_100000.txt  mean100000.csv
rsc/jsh/ver2/: GRU_39000.txt  MLP_39000.txt  mean39000.csv  var39000.csv
rsc/jsh/ver3/: GRU_37400.txt  MLP_37400.txt
src/raisin_toppling_controller/: raisin_toppling_controller.cpp
